# sleepy-discord-template

./: CMakeLists.txt  README.md  main.cpp
src/: Client.cpp  Client.h
src/commands/: TestCommand.cpp  TestCommand.h
src/utils/: CommandHandler.h
src/utils/inferfaces/: Command.h
